fix Java 8 violations